; ModuleID = '/home/carl/AnghaBench/reactos/boot/freeldr/freeldr/arch/i386/extr_machpc.c_PcMachInit.c'
source_filename = "/home/carl/AnghaBench/reactos/boot/freeldr/freeldr/arch/i386/extr_machpc.c_PcMachInit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32 }

@PcConsPutChar = common dso_local global i32 0, align 4
@MachVtbl = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@PcConsKbHit = common dso_local global i32 0, align 4
@PcConsGetCh = common dso_local global i32 0, align 4
@PcVideoClearScreen = common dso_local global i32 0, align 4
@PcVideoSetDisplayMode = common dso_local global i32 0, align 4
@PcVideoGetDisplaySize = common dso_local global i32 0, align 4
@PcVideoGetBufferSize = common dso_local global i32 0, align 4
@PcVideoGetFontsFromFirmware = common dso_local global i32 0, align 4
@PcVideoSetTextCursorPosition = common dso_local global i32 0, align 4
@PcVideoHideShowTextCursor = common dso_local global i32 0, align 4
@PcVideoPutChar = common dso_local global i32 0, align 4
@PcVideoCopyOffScreenBufferToVRAM = common dso_local global i32 0, align 4
@PcVideoIsPaletteFixed = common dso_local global i32 0, align 4
@PcVideoSetPaletteColor = common dso_local global i32 0, align 4
@PcVideoGetPaletteColor = common dso_local global i32 0, align 4
@PcVideoSync = common dso_local global i32 0, align 4
@PcBeep = common dso_local global i32 0, align 4
@PcPrepareForReactOS = common dso_local global i32 0, align 4
@PcMemGetMemoryMap = common dso_local global i32 0, align 4
@PcGetExtendedBIOSData = common dso_local global i32 0, align 4
@PcGetFloppyCount = common dso_local global i32 0, align 4
@PcDiskReadLogicalSectors = common dso_local global i32 0, align 4
@PcDiskGetDriveGeometry = common dso_local global i32 0, align 4
@PcDiskGetCacheableBlockCount = common dso_local global i32 0, align 4
@PcGetTime = common dso_local global i32 0, align 4
@PcInitializeBootDevices = common dso_local global i32 0, align 4
@PcHwDetect = common dso_local global i32 0, align 4
@PcHwIdle = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @PcMachInit(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %4 = load i32, i32* @PcConsPutChar, align 4
  store i32 %4, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 27), align 4
  %5 = load i32, i32* @PcConsKbHit, align 4
  store i32 %5, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 26), align 4
  %6 = load i32, i32* @PcConsGetCh, align 4
  store i32 %6, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 25), align 4
  %7 = load i32, i32* @PcVideoClearScreen, align 4
  store i32 %7, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 24), align 4
  %8 = load i32, i32* @PcVideoSetDisplayMode, align 4
  store i32 %8, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 23), align 4
  %9 = load i32, i32* @PcVideoGetDisplaySize, align 4
  store i32 %9, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 22), align 4
  %10 = load i32, i32* @PcVideoGetBufferSize, align 4
  store i32 %10, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 21), align 4
  %11 = load i32, i32* @PcVideoGetFontsFromFirmware, align 4
  store i32 %11, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 20), align 4
  %12 = load i32, i32* @PcVideoSetTextCursorPosition, align 4
  store i32 %12, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 19), align 4
  %13 = load i32, i32* @PcVideoHideShowTextCursor, align 4
  store i32 %13, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 18), align 4
  %14 = load i32, i32* @PcVideoPutChar, align 4
  store i32 %14, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 17), align 4
  %15 = load i32, i32* @PcVideoCopyOffScreenBufferToVRAM, align 4
  store i32 %15, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 16), align 4
  %16 = load i32, i32* @PcVideoIsPaletteFixed, align 4
  store i32 %16, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 15), align 4
  %17 = load i32, i32* @PcVideoSetPaletteColor, align 4
  store i32 %17, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 14), align 4
  %18 = load i32, i32* @PcVideoGetPaletteColor, align 4
  store i32 %18, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 13), align 4
  %19 = load i32, i32* @PcVideoSync, align 4
  store i32 %19, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 12), align 4
  %20 = load i32, i32* @PcBeep, align 4
  store i32 %20, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 11), align 4
  %21 = load i32, i32* @PcPrepareForReactOS, align 4
  store i32 %21, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 10), align 4
  %22 = load i32, i32* @PcMemGetMemoryMap, align 4
  store i32 %22, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 9), align 4
  %23 = load i32, i32* @PcGetExtendedBIOSData, align 4
  store i32 %23, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 8), align 4
  %24 = load i32, i32* @PcGetFloppyCount, align 4
  store i32 %24, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 7), align 4
  %25 = load i32, i32* @PcDiskReadLogicalSectors, align 4
  store i32 %25, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 6), align 4
  %26 = load i32, i32* @PcDiskGetDriveGeometry, align 4
  store i32 %26, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 5), align 4
  %27 = load i32, i32* @PcDiskGetCacheableBlockCount, align 4
  store i32 %27, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 4), align 4
  %28 = load i32, i32* @PcGetTime, align 4
  store i32 %28, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 3), align 4
  %29 = load i32, i32* @PcInitializeBootDevices, align 4
  store i32 %29, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 2), align 4
  %30 = load i32, i32* @PcHwDetect, align 4
  store i32 %30, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 1), align 4
  %31 = load i32, i32* @PcHwIdle, align 4
  store i32 %31, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @MachVtbl, i32 0, i32 0), align 4
  %32 = load i32, i32* %2, align 4
  ret i32 %32
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
